unpackaged/main/default/objects/Product2/fields/Current_Inventory__c.field-meta.xml
<CustomField>
        <fullName>Current_Inventory__c</fullName>
        <label>Current Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>