unpackaged/main/default/objects/Product2/fields/Lifespan_Months__c.field-meta.xml
<CustomField>
        <fullName>Lifespan_Months__c</fullName>
        <label>Lifespan Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>