unpackaged/main/default/objects/Product2/fields/Maintenance_Cycle__c.field-meta.xml
<CustomField>
        <fullName>Maintenance_Cycle__c</fullName>
        <description>Number of days required before routine maintenance is needed</description>
        <label>Maintenance Cycle (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>